--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,12 @@ redox_uefi = "0.1.0"
 redox_uefi_std = "0.1.3"
 rlibc = "1.0"
 system76_ecflash = { git = "https://github.com/system76/ecflash.git" }
-system76_ectool = { git = "https://github.com/system76/ec.git", default-features = false, features = ["redox_hwio"] }
+
+[dependencies.system76_ectool]
+git = "https://github.com/system76/ec.git"
+branch = "security"
+default-features = false
+features = ["redox_hwio"]
 
 [dependencies.orbclient]
 git = "https://gitlab.redox-os.org/redox-os/orbclient.git"
